--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,23 @@ article {
 }
 
 .logo-image {
-  height: 100px;
-  width: auto;
-  float: left;
-  display: inline-block;
-  padding-left: 10%;
+  max-height: 90px;
+  padding: 10px;
+  display: flex;
+  flex-basis: 100px;
 }
+
+.App-header {
+  background-image: linear-gradient(to bottom right, aqua , blueviolet, hotpink, orange, yellow);
+  color: #fff;
+  text-shadow: #000 2px 2px 4px;
+  -webkit-font-smoothing: antialiased;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
 
 .footer {
   position: fixed;
